manifests/network/nw-po/ext-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-ingress-to-frontend
  namespace: md
spec:
  podSelector:
    matchLabels: 
      app: frontend 
  policyTypes: 
  - Ingress 
  ingress: 
  - ports:
     - port: 80
