manifests/network/nw-po/fro-gat-eg.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-frontend-egress
  namespace: md 
spec: 
  podSelector: 
    matchLabels:
      app: frontend
  policyTypes: 
  - Egress 
  egress:
  - to: 
    - podSelector: 
       matchLabels: 
         app: gateway 
    ports: 
     - port: 3000
