manifests/network/nw-po/gat-ord.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: gatway-to-orderservice
  namespace: md
spec:
  podSelector:
    matchLabels: 
     app: order-service
  policyTypes:
  - Ingress 
  ingress: 
  - from: 
    - podSelector: 
        matchLabels:
          app: gateway 
    ports: 
     - port: 3002
