manifests/network/nw-po/gat-usr-ord-eg.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: gateway-to-userservice-egress
  namespace: md 
spec: 
  podSelector:
    matchLabels:
      app: gateway 
  policyTypes: 
  - Egress 
  egress: 
  - to:
    - podSelector: 
       matchLabels:
        app: user-service 
    ports:
     - port: 3001 
  - to: 
     - podSelector: 
        matchLabels: 
          app: order-service 
    ports: 
      - port: 3002
